remove old files

--- a/.github/workflows/daily-check.yaml
+++ b/.github/workflows/daily-check.yaml
@@ -28,7 +28,13 @@ jobs:
         run: |
           git config --global user.name "github-actions[bot]"
           git config --global user.email "github-actions[bot]@users.noreply.github.com"
+          
+          # Stage removals first
+          git rm *_missing.csv --ignore-unmatch
+    
+          # Stage the newly generated file
           git add *_missing.csv
+          
           if git diff --cached --quiet; then
             echo "No changes to commit."
           else
